Fixed play button on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -487,6 +487,36 @@ label {
 
 #headshot {width: 100%}
 
+#jeremyComputer {
+  width: 40%;
+  margin: 5vw 5vw 0vw 5vw;
+}
+
+#aboutPageBody {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+#aboutPageCopy {
+  display: flex;
+  flex-direction: column;
+  padding-right: 5vw;
+  font-size: 1.5vw;
+  line-height: 2.4vw;
+}
+
+#aboutPageTitle {
+  font-size: 5vw;
+  line-height: 5vw;
+  margin: 3vw 0 0 0;
+}
+
+.aboutPageSubtitle {
+  font-size: 3vw;
+}
+
 /* CONTACT COMPONENT */
 #contactContainer {
   display: flex;
@@ -1054,6 +1084,35 @@ footer {
   .dogTransparent {
     height: 24px;
   }
+  #jeremyComputer {
+  width: 40%;
+  margin: 5vw 5vw 0vw 5vw;
+  }
+
+  #aboutPageBody {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #aboutPageCopy {
+    display: flex;
+    flex-direction: column;
+    padding-right: 5vw;
+    font-size: 1.5vw;
+    line-height: 2.4vw;
+  }
+
+  #aboutPageTitle {
+    font-size: 5vw;
+    line-height: 5vw;
+    margin: 3vw 0 0 0;
+  }
+
+  .aboutPageSubtitle {
+    font-size: 3vw;
+  }
 
 }
 
@@ -1084,6 +1143,9 @@ footer {
     width: 66.5vw;
     padding: 0.75vw;
   } */
+  .playLink {
+    margin-top: 10px;
+  }
 }
 
 @media only screen and (max-width: 374px) {
